add computation of T

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +55,14 @@
     "\n",
     "from data_preprocessing import load_and_process_data, normalize_timeseries\n",
     "from plotting import plot_timeseries, plot_query_database_with_bounds, plot_sequence_with_paa, plot_sequence_with_bounds_and_paa, plot_matches_knn_search, plot_range_search_results\n",
-    "from dtw_functions import lb_keogh, paa\n",
+    "from dtw_functions import lb_keogh, paa, lb_kim, lb_yi\n",
     "from indexed_structure import IndexedStructure\n",
     "from indexing import knn_search, range_search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "1749-05-31                              141.7"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "  4.688435447965529)]"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -861,6 +861,78 @@
    "metadata": {},
    "source": [
     "Since our data has a large scale, even small percentage differences will result in a large DTW distances. Therefore, we normalize the data in order to make the data more comparable. Without normalization, it was necessary to use a really high epsilon value to find any matches in the algorithm range search."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimental evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tightness of the Lower Bound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform the experiment\n",
+    "def perform_experiment_T(dataset, lb_func, num_sequences, sequence_length):\n",
+    "    results = []\n",
+    "    for _ in range(num_sequences):\n",
+    "        # Select two random sequences from the dataset\n",
+    "        seq1 = np.random.choice(dataset, size=sequence_length)\n",
+    "        seq2 = np.random.choice(dataset, size=sequence_length)\n",
+    "\n",
+    "        # Calculate lower bounding distance and actual DTW distance\n",
+    "        if lb_func == lb_keogh:\n",
+    "            lb = lb_func(seq1, seq2, 3)\n",
+    "        else:\n",
+    "            lb = lb_func(seq1, seq2)\n",
+    "        dtw_dist = dtw_distance(seq1, seq2)\n",
+    "\n",
+    "        # Calculate the tightness of the lower bound\n",
+    "        T = lb / dtw_dist if dtw_dist != 0 else 0\n",
+    "        results.append(T)\n",
+    "\n",
+    "        return np.mean(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average tightness of the lower bound (Kim): 0.06264912128485749\n",
+      "Average tightness of the lower bound (Yi): 0.054316870810023336\n",
+      "Average tightness of the lower bound (Keogh): 0.6485906537495106\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform the experiment\n",
+    "num_sequences = 50\n",
+    "sequence_length = 256\n",
+    "\n",
+    "# Calculate the average tightness of the lower bound\n",
+    "T_lb_keogh = perform_experiment_T(sunspots, lb_keogh, num_sequences, sequence_length)\n",
+    "T_lb_kim = perform_experiment_T(sunspots, lb_kim, num_sequences, sequence_length)\n",
+    "T_lb_yi = perform_experiment_T(sunspots, lb_yi, num_sequences, sequence_length)\n",
+    "\n",
+    "print(f\"Average tightness of the lower bound (Kim): {T_lb_kim}\")\n",
+    "print(f\"Average tightness of the lower bound (Yi): {T_lb_yi}\")\n",
+    "print(f\"Average tightness of the lower bound (Keogh): {T_lb_keogh}\")"
    ]
   }
  ],
